Adding more pages

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Welcome!</h1>
 <p>It's has been one year already and we are ready to rock again! Join us on this magical adventure!</p>
-<p> <a href="events.html">Events</a> <br> <a href="reg.html">Registration</a> <br> <a href="contact.html"> Contact Us </a> </p>
+<p> <a href="events.html">Events</a> <br> <a href="form.html">Registration</a> <br> <a href="contact.html"> Contact Us </a> </p>
 </body>
 </html>
