Adding basic CSS and making a presentable site

--- a/site/contact.html
+++ b/site/contact.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>Contact Us</title>
+	<link href="stylesheet1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<p>You may contact us by either sending a mail to abcde.f@yahoo.co.in or by calling 9893756820. (Note: It's fake) </p>
+	<h1>Contact Details</h1>
+	<p>You may contact us by either sending a mail to <br> abcde.f@yahoo.co.in <br> or by calling 9893756820. <br> (Note: Credibility of info here is a ?) </p>
+
+	<a href="index.html">Go to Home Page</a>
 </body>
 </html>
