--- a/site/events.html
+++ b/site/events.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<title>Events</title>
+	<link href="stylesheet1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h2>Event A</h2>
-<p>You need to go from point A to point A' using the quickest route possible</p>
-<h2>Event B</h2>
-<p>I will be adding instructions for Event B here</p>
-<h2>Event C</h2>
-<p>Instuctions for Event C goes here</p>
+	<h1>Events List</h1>
+	<h2>Event A</h2>
+		<p>You need to go from point A to point A' using the quickest route possible</p>
+	<h2>Event B</h2>
+		<p>I will be adding instructions for Event B here</p>
+	<h2>Event C</h2>
+		<p>Instuctions for Event C goes here</p>
+	<br> <br>
+	<p> To register for the events, please visit the link <a href="form.html">here</a>.</p>
+	<a href="index.html">Go to Home Page</a>
 </body>
 </html>
