--- a/site/index.html
+++ b/site/index.html
@@ -2,10 +2,25 @@
 <html>
 <head>
 	<title>Maglama - Home Page</title>
+	<!-- <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> -->
+<link href="stylesheet1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>Welcome!</h1>
-<p>It's has been one year already and we are ready to rock again! Join us on this magical adventure!</p>
-<p> <a href="events.html">Events</a> <br> <a href="form.html">Registration</a> <br> <a href="contact.html"> Contact Us </a> </p>
+	<div class="header">
+		<h1>Welcome!</h1>
+	</div>
+	<div class="centerDoc">
+		<p>
+			It's has been one year already and we are ready to rock again! Join us on this magical adventure!
+		</p> 
+	</div>
+	<div class="navigation">
+		<p> 
+			<a href="events.html">Events</a> <br> 
+			<a href="form.html">Registration</a> <br> 
+			<a href="contact.html">Contact Us</a> <br> <br> <br> <br>
+			For giving us a feedback, please visit this <a href="reg.html">page</a>. (Note: this is the HTML form).
+		</p> 
+	</div>
 </body>
 </html>
