--- a/site/form.html
+++ b/site/form.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 	<title>Registration Form</title>
+	<link href="stylesheet1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<p>Kindly fill this form to register for the events.</p>
-<p>More information on the events <a href="events.html">here</a>. </p>
-<iframe src="https://docs.google.com/forms/d/1HJwx5akMYqG7ZhV0EP3Gr4voEXghBv8Tgpbkv5E7EVo/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	<h1>Registration Form</h1>
+	<p>Kindly fill the Google Form that loads below to register for the events.</p>
+	<p>For more information on the events, click <a href="events.html">here</a>. </p>
+	<a href="index.html">Go to Home Page</a> <br> <br>
+		<iframe src="https://docs.google.com/forms/d/1HJwx5akMYqG7ZhV0EP3Gr4voEXghBv8Tgpbkv5E7EVo/viewform?embedded=true" width="500" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...
+		</iframe>
+		<br> <br>	
 </body>
 </html>
