--- a/site/reg.html
+++ b/site/reg.html
@@ -1,10 +1,34 @@
 <html>
 <head>
-	<title> Registration Form - Maglama </title>
+	<title> Feedback Form - Maglama </title>
+	<link href="stylesheet1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<form>
-		
+	<h1>Feedback Form</h1>
+	<div class="form"></div>
+	<form action="thanks.html">
+		<fieldset>
+		<legend>Personal Information (Optional) :</legend>
+			<label>Name :</label> <br>	
+			<input type="text"> <br> <br>
+			<label>Phone Number :</label> <br>
+			<input type="tel">
+		</fieldset>
+		<fieldset>
+			<legend>Feedback and Comments :</legend>
+			<label>Event</label> <br>
+			<input type="radio"> Event A <br>
+			<input type="radio"> Event B <br>
+			<input type="radio"> Event C <br>
+			<br>
+			<label>Comments :</label> <br>
+			<textarea cols="40" rows="3"></textarea>
+		</fieldset>
+		<div class="center">
+		<input type="submit" value="Submit">
+		</div>
 	</form>
+	</div>
+	<a href="index.html">Go to Home Page</a>
 </body>
 </html>
